cmake_minimum_required(VERSION 3.15)
project(DevSkill_Batch6_Sorting)

set(CMAKE_CXX_STANDARD 11)

add_executable(DevSkill_Batch6_Sorting main.cpp I-Sorting/i.cpp)
add_executable(i I-Sorting/i.cpp)
add_executable(j J-QuickSort/j.cpp)
add_executable(n N-CountingSort/n.cpp)
add_executable(a A-BoiledEggs/a.cpp)
add_executable(b B-Shopaholic/b.cpp)